--- a/foyer.html
+++ b/foyer.html
@@ -58,25 +58,25 @@
       </div>
     </div>
     <div class="row  foyerGrid">
-      <div class="col-md-6 foyerText text-justify">
-        <h1 class"display-5">0. Vestibule </h1>
-        <p>
-          Posséder un foyer, s’y sentir chez soi, a longtemps été primordial à mes yeux.
-          <br>
-          J'ai un moment résidé dans un appartement situé dans le sixième arrondissement de Lyon, qui appartenait à mes grands-parents.
-          <br>
-          La question du chez-soi s’est beaucoup posée au cours de ma vie dans ces lieux ; la condition pour y séjourner, édictée par mon père, était la suivante : laisser l’appartement disposé tel que mes grands-parents l’ont laissé après leur
-          mort.
-          <br>
-          J’ai du apprendre à évoluer au milieu de leurs effets personnels ; la plupart du mobilier, n’a pas ou très peu changé de disposition depuis
-          l’installation de ma famille paternelle dans les lieux en 1957, date de construction de l’immeuble...
-        </p>
+      <div class="col-xl-6 foyerText foyerIntro">
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-10">
+            <h1 class"display-5">0. Vestibule </h1>
+            <p class="text-justify">
+              Posséder un foyer, s’y sentir chez soi, a longtemps été primordial à mes yeux.
+              <br>
+              J'ai un moment résidé dans un appartement situé dans le sixième arrondissement de Lyon, qui appartenait à mes grands-parents..
+            </p>
+          </div>
+          <div class="col-1"></div>
+        </div>
       </div>
-      <div class="col-md-6 px-0">
+      <div class="col-xl-6 px-0">
         <img class="img-fluid" src="./ImagesSophie/IMG_0206.jpg" alt="vestibule" oncontextmenu="return false;">
       </div>
     </div>
-    <div class="row foyerText foyerGrid">
+    <div class="row foyerText pt-3 pb-0">
       <div class="panel-group">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -85,28 +85,154 @@
             </h4>
           </div>
           <div id="collapse1" class="panel-collapse collapse">
-            <div class="panel-body">
-              <p>Certaines prises électriques ne sont pas aux normes ; les tapisseries, vieilles de soixante ans, commencent à se racornir et leur couleur s’affadit ; des tableaux du XIXème siècle, dessins, gravures, ou peintures de mon
-                oncle,ainsi que vieux luminaires et autres curiosités sont accrochés au murs et viennent renforcer cette impression d’être dans un autre temps, d’être en décalage avec ce qui m’entoure. De ce fait, la présence de mes
-                grands-parents, même de mon père et mon oncle y est encore fortement palpable. Il y a une véritable confrontation entre deux époques : ce passé familial et le présent que je tente d’apporter, amenant une forme d’anachronisme dans
-                mon mode de vie. Outre cette première condition, je n’avais le droit d’apporter aucun mobilier de ma propriété, la maisonnée de mes grands-parents étant déjà assez bien fournie. La plupart de mes effets personnels sont restés dans
-                un garage au pied de leur immeuble ; y sont enfermés les vestiges de ma vie d’autrefois, lorsque je possédais mon propre habitat. Les objets m’appartenant peuvent s’énumérer succinctement : livres, vê¬tements, affaires de toilette,
+            <div class="panel-body mx-4">
+              <p class="text-justify">La question du chez-soi s’est beaucoup posée au cours de ma vie dans ces lieux ; la condition pour y séjourner, édictée par mon père, était la suivante : laisser l’appartement disposé tel que mes
+                grands-parents
+                l’ont laissé après leur
+                mort. J’ai du apprendre à évoluer au milieu de leurs effets personnels ; la plupart du mobilier, n’a pas ou très peu changé de disposition depuis
+                l’installation de ma famille paternelle dans les lieux en 1957, date de construction de l’immeuble... Certaines prises électriques ne sont pas aux normes ; les tapisseries, vieilles de soixante ans, commencent à se racornir et leur
+                couleur s’affadit ; des tableaux du XIXème siècle, dessins, gravures, ou
+                peintures de mon oncle,ainsi que vieux luminaires et autres curiosités sont accrochés au murs et viennent renforcer cette impression d’être dans un autre temps, d’être en décalage avec ce qui m’entoure. De ce fait, la présence de mes
+                grands-parents, même de mon père et mon oncle y est encore fortement palpable. Il y a une véritable confrontation entre deux époques : ce passé familial et le présent que je tente d’apporter, amenant une forme d’anachronisme dans mon
+                mode de vie. Outre cette première condition, je n’avais le droit d’apporter aucun mobilier de ma propriété, la maisonnée de mes grands-parents étant déjà assez bien fournie. La plupart de mes effets personnels sont restés dans un
+                garage au pied de leur immeuble ; y sont enfermés les vestiges de ma vie d’autrefois, lorsque je possédais mon propre habitat. Les objets m’appartenant peuvent s’énumérer succinctement : livres, vê¬tements, affaires de toilette,
                 quelques objets usuels ou de décoration, ainsi qu’un fauteuil, un tableau, une penderie et, plus récemment, un matelas. J’ai longtemps diabolisé ce lieu de vie ; y habiter fut comme une régression pour moi ; j’avais un sentiment de
-                retour au foyer familial, à la dépendance et à l’infantilisation. Les premières années de ma vie dans cet appartement furent difficiles, justement parce que je ne devais laisser aucune trace de ma personne, ne rien apporter de ce
-                qui constitue mon être. Ce n’est que récemment que je me suis rendue compte de la richesse que cet endroit contenait : il y a quelques mois, je suis tombée sur les diapositives de mon grand père, trésor inestimable. M’est alors
-                venue la volonté de concentrer mon travail photographique sur mon habitat ; c’est dans une démarche autobiographique que j’ai décidé de mener ce travail, mettant en lumière mes propres questionnements quant à la définition du «
-                chez soi » : comment s’adapter dans un lieu de vie figé dans le temps ? Comment évoluer dans un milieu qui n’est pas le sien ? A-t-on besoin de nos affaires, de notre mobilier, pour nous sentir chez nous ? Comment s’imprégner de la
-                mémoire d’un lieu afin de se réapproprier ce dernier ? Sans prétendre apporter une réponse objective, ni complète, mais simplement un point de vue, une progression de ma pensée, mon mémoire retrace mon chemin intérieur parcouru
-                pour parvenir enfin à habiter les lieux, voire me sentir habitée par ceux-ci. Cette progression sera évoquée en trois temps, qui reprendront chacun les trois définitions du Foyer mentionnées plus tôt : dans un premier temps, je
-                partirai de la source ; à travers un récit autobiographique, je parlerai de ce qui a provoqué mon entrée dans cet habitat, des épreuves traversées, de mes rencontres et de mes voyages qui ont forgé ma pensée et m’ont amenée à
-                apporter un regard neuf sur mon chez-moi ; dans un deuxième temps, je tenterai, de par mes réflexions personnelles, d’amener une définition propre du « chez-soi » ; enfin, à travers l’évocation de mon travail photographique, je
-                mettrai en lumière le regard que je porte désormais sur mon appartement, passant de l’étonnement, la sensation de découverte sans cesse renouvelée à une forme d’allégresse. </p>
+                retour au foyer familial, à la dépendance et à l’infantilisation. Les premières années de ma vie dans cet appartement furent difficiles, justement parce que je ne devais laisser aucune trace de ma personne, ne rien apporter de ce qui
+                constitue mon être. Ce n’est que récemment que je me suis rendue compte de la richesse que cet endroit contenait : il y a quelques mois, je suis tombée sur les diapositives de mon grand père, trésor inestimable. M’est alors venue la
+                volonté de concentrer mon travail photographique sur mon habitat ; c’est dans une démarche autobiographique que j’ai décidé de mener ce travail, mettant en lumière mes propres questionnements quant à la définition du «chez soi » :
+                comment s’adapter dans un lieu de vie figé dans le temps ? Comment évoluer dans un milieu qui n’est pas le sien ? A-t-on besoin de nos affaires, de notre mobilier, pour nous sentir chez nous ? Comment s’imprégner de la mémoire d’un
+                lieu afin de se réapproprier ce dernier ? Sans prétendre apporter une réponse objective, ni complète, mais simplement un point de vue, une progression de ma pensée, mon mémoire retrace mon chemin intérieur parcouru pour parvenir
+                enfin à habiter les lieux, voire me sentir habitée par ceux-ci. Cette progression sera évoquée en trois temps, qui reprendront chacun les trois définitions du Foyer mentionnées plus tôt : dans un premier temps, je partirai de la
+                source ; à travers un récit autobiographique, je parlerai de ce qui a provoqué mon entrée dans cet habitat, des épreuves traversées, de mes rencontres et de mes voyages qui ont forgé ma pensée et m’ont amenée à apporter un regard
+                neuf sur mon chez-moi ; dans un deuxième temps, je tenterai, de par mes réflexions personnelles, d’amener une définition propre du « chez-soi » ; enfin, à travers l’évocation de mon travail photographique, je mettrai en lumière le
+                regard que je porte désormais sur mon appartement, passant de l’étonnement, la sensation de découverte sans cesse renouvelée à une forme d’allégresse.
+              </p>
             </div>
           </div>
         </div>
       </div>
-
     </div>
+    <div class="row mb-3">
+      <div class="col-12 mb-3">
+        <h1 class="text-center">I. L'Âtre</h1>
+      </div>
+      <div class="row  foyerGrid">
+        <div class="col-xl-6 px-0">
+          <img class="img-fluid" src="./ImagesSophie/IMG_0011.jpg" alt="vestibule" oncontextmenu="return false;">
+        </div>
+        <div class="col-xl-6 foyerText foyerIntro">
+          <h1 class"display-4">1. Le Songe de la Maison Natale</h1>
+          <p class="">
+            <br>
+            « O nostalgie des lieux qui n’étaient point
+            <br>
+            Assez aimés à l’heure passagère,
+            <br>
+            Que je voudrais leur rendre de loin
+            <br>
+            Le geste oublié, l’action supplémentaire.¹ »
+          </p>
+        </div>
+      </div>
+      <div class="row foyerText pt-3 pb-0">
+        <div class="panel-group">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" href="#collapse1">Read More</a>
+              </h4>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse">
+              <div class="panel-body mx-4">
+                <p class="text-justify">
+                  C’est en septembre 2011 que j’ai échoué dans ces lieux. Echouer,
+                  dans les deux sens du terme : car mon emménagement s’est effectué
+                  par défaut, presque dans la précipitation, m’étant moi-même contrainte
+                  de quitter l’appartement où je résidais suite à une rupture avec mon
+                  compagnon de l’époque. N’ayant guère la force de résider trois mois,
+                  délai du préavis avant de résilier notre bail, dans ce qui a été pendant
+                  quatre ans l’incarnation de mon chez-moi, et par faute de temps
+                  pour retrouver un appartement, j’ai décidé de m’installer, à la base
+                  temporairement et avec l’accord de mon père, dans celui de ma grandmère,
+                  résidant en ce temps dans une maison de retraite.
+                  Le départ de ce premier Foyer a engendré un immense
+                  bouleversement en moi, comme si toute l’identité dont je m’étais
+                  forgée dans ces lieux se dissipait d’un coup. J’ai vécu dans ce premier
+                  appartement pendant quatre ans, de 2007 à 2011 donc, en ayant eu le
+                  loisir de le personnaliser à souhait, de le meubler selon mes propres
+                  goûts, d’y organiser des soirées sans n’avoir de compte à rendre à
+                  .personne, ne me souciant du mobilier cassé, des verres renversés ou du
+                  parquet sali pendant nos célébrations. A cette époque, je commençais
+                  juste à m’intéresser à la photographie, et me plaisais déjà à capter, assez
+                  maladroitement puisque sans expérience, chaque instant de vie. Il me
+                  reste surtout des images des innombrables soirées que nous y avons
+                  fait, et, à mon grand regret, seulement quelques images descriptives
+                  du lieu, dont une photo de mon salon, prise en 2010, par une matinée
+                  ensoleillée (fig. 1).
+                  Mon départ de cet appartement a engendré un fort sentiment
+                  de dépossession, de nostalgie, de regret relatif à ce lieu de vie que j’ai
+                  longtemps nommé ma Maison Natale, terme emprunté aux vers d’Yves
+                  Bonnefoy² ; c’est précisément ce qu’il incarnait : un lieu d’Eveil et de
+                  Renaissance. « Car la maison est notre coin du monde. Elle est — on l’a
+                  souvent dit — notre premier univers. Elle est vraiment un cosmos. Un
+                  cosmos dans toute l’acception du terme³ », écrit Gaston Bachelard en
+                  1958.
+                  Etrangement, le deuil de cet appartement fut plus lourd à
+                  surmonter que le deuil de mon ex-compagnon, non pas que je fusse
+                  davantage attachée à la matérialité des choses (quoique, mais nous
+                  reviendrons sur cette question dans la partie suivante), mais nous
+                  sommes parvenus assez rapidement à muer notre amour passé en
+                  amitié, tandis que la question du chez-moi se situait dans un état de
+                  non-retour. Impossible effectivement de retourner y vivre, quand bien
+                  même j’en eusse eu la possibilité, car cela restait malgré tout un Foyer
+                  construit à deux, emblématique qui plus est d’une période symbolique
+                  de ma vie, et y retourner n’aurait eu aucun sens.
+
+                  Bien sûr, rétrospectivement, je reste consciente que ma vision
+                  de cette Maison Natale s’est vue complètement sublimée, idéalisée par
+                  le souvenir et la nostalgie. Elle incarnait parfaitement cette maison du
+                  « souvenir-songe », évoquée par Gaston Bachelard, une maison « perdue
+                  dans l’ombre d’un au-delà du passé vrai⁴ ». Dans sa Poétique de
+                  l’Espace, il s’attache à définir les valeurs que l’on accorde à la Maison,
+                  valeurs de protection, de refuge dans un premier temps, qui finissent
+                  par s’éloigner de la réalité objective pour se muer en « valeurs imaginées
+                  », valeurs qui prennent le pas sur le sentiment de protection
+                  auquel on s’est préalablement attaché : « Tous les abris, tous les refuges,
+                  toutes les chambres ont des valeurs d’onirisme consonantes. Ce n’est
+                  .plus dans sa positivité que la maison est véritablement « vécue », ce n’est
+                  pas seulement dans l’heure qui sonne qu’on en reconnaît les bienfaits.
+                  Les vrais bien-êtres ont un passé. Tout un passé vient vivre, par le songe,
+                  dans une maison nouvelle⁵ ».
+                  Il m’arrivait encore jusqu’à récemment, dans mes rêves, de
+                  retourner vivre dans ma Maison Natale. Ces rêves, souvent, étaient
+                  emprunts d’une immense tristesse. Coïncidence ou non, la surgie
+                  de ces rêves correspondait à des périodes transitoires et difficiles de
+                  ma vie. Ce lieu était resté un refuge où je pouvais retourner m’abriter
+                  lors de tempêtes extérieures. Cela traduisait sans doute un manque à
+                  combler dans mon esprit, manque des « trésors des jours anciens »,
+                  car ces lieux avaient été emplis d’un amour, d’un bonheur que je ne
+                  parvenais plus, pendant quelques temps, à trouver après en être partie.
+                  « Même lorsque ces espaces sont à jamais rayés du présent, étrangers
+                  désormais à toutes les promesses d’avenir, même lorsqu’on n’a plus de
+                  grenier, même lorsqu’on a perdu la mansarde, il restera toujours qu’on
+                  a aimé un grenier, qu’on a vécu dans une mansarde. On y retourne
+                  dans les songes de la nuit⁶ ». Et pourtant, dans ces rêves, toujours cette
+                  Maison Natale revêtait une apparence différente ; tantôt une chaumière
+                  au milieu de la campagne, tantôt une église en ruine, tantôt un hôtel
+                  particulier dans le centre d’une métropole fictive ; mon esprit tentait-il
+                  de me faire comprendre que même mes souvenirs liés à ce lieu étaient
+                  faux ? En effet, je réalise bien qu’il y avait une part romancée,
+                  fictionnelle dans mes souvenirs. Mais au fond, est-ce si grave que ça
+                  ? Ce n’est pas le récit, mais la manière de le conter qui est important,
+                  quand bien même notre vision reste subjective, et nos souvenirs modifiés par le prisme de notre regard. Fiction et réalité s’entrecroisent en permanence ; la réalité est une chose, certes, mais dans la manière
+                  dont nos souvenirs vont la tailler, là réside l’essentiel. « La vie, ce n’est
+                  pas ce qu’on a vécu, mais ce dont on se souvient pour le raconter⁷ » écrit
+                  Gabriel Garcia Marquez dans la préface de son autobiographie.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
   </section>
 
   <!-- Footer -->
